fix(cxl-ui): cxl-base-card delete .name margins
Inherited margins from headings and caused too much whitespace.

--- a/packages/cxl-ui/scss/cxl-base-card.scss
+++ b/packages/cxl-ui/scss/cxl-base-card.scss
@@ -157,6 +157,7 @@ header {
 
     .name {
       @include mixins.ellipsis-for-lines(2);
+      margin-block: 0;
 
       a {
         color: var(--lumo-body-text-color);
